--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/puppeteer": "5.4.3",
+    "@types/puppeteer-core": "5.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.3"
