Add jsonresume to md resume, and better api route
github user name is now provided as a query param in the api route
basic template for json to markdown

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "import/no-anonymous-default-export": ["error", {
+  "allowArray": false,
+  "allowArrowFunction": false,
+  "allowAnonymousClass": false,
+  "allowAnonymousFunction": true,
+  "allowCallExpression": true, // The true value here is for backward compatibility
+  "allowLiteral": false,
+  "allowObject": false
+}]
 }
