--- a/package.json
+++ b/package.json
@@ -8,18 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
+    "framer-motion": "^4",
     "handlebars": "^4.7.7",
+    "json2md": "^1.12.0",
     "next": "12.0.7",
     "puppeteer-core": "^13.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yaml": "^2.0.0-9"
   },
   "devDependencies": {
+    "@types/json2md": "^1.5.1",
     "@types/node": "16.11.12",
-    "@types/react": "17.0.37",
     "@types/puppeteer": "5.4.3",
     "@types/puppeteer-core": "5.4.0",
+    "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "typescript": "4.5.3"
