--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,16 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["/*"],
+      "@components/*": ["components/*"],
+      "@api/*": ["pages/api/*"],
+      "@utils/*": ["lib/utils/*"],
+      "@lib/*": ["lib/*"],
+      "@styles/*": ["styles/*"],
+    },
+    "typeRoots": [ "types" ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "styles/index.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
