--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/roboto-condensed": "^4.5.0",
+    "@octokit/auth-app": "^3.6.1",
+    "@octokit/core": "^3.5.1",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
@@ -21,6 +24,7 @@
     "puppeteer-core": "^13.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.45.0",
     "yaml": "^2.0.0-9"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
     "typescript": "4.5.3"
   }
 }
