Swap to just css modules with css
Also started the resume page

--- a/package.json
+++ b/package.json
@@ -8,18 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fontsource/roboto-condensed": "^4.5.0",
     "@octokit/auth-app": "^3.6.1",
     "@octokit/core": "^3.5.1",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
-    "framer-motion": "^4",
-    "handlebars": "^4.7.7",
     "json2md": "^1.12.0",
+    "libphonenumber-js": "^1.9.44",
     "next": "12.0.7",
     "puppeteer-core": "^13.0.0",
     "react": "17.0.2",
