--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "puppeteer-core": "^13.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "resume-schema": "^1.0.0",
     "sass": "^1.45.0",
     "yaml": "^2.0.0-9"
   },
