--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/crawler": "^1.2.2",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
+    "crawler": "^1.3.0",
     "json2md": "^1.12.0",
+    "keyword-extractor": "^0.0.20",
     "libphonenumber-js": "^1.9.44",
     "next": "12.0.7",
     "puppeteer-core": "^13.0.0",
