Got the resume to print nicely

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "import/no-anonymous-default-export": ["error", {
-  "allowArray": false,
-  "allowArrowFunction": false,
-  "allowAnonymousClass": false,
-  "allowAnonymousFunction": true,
-  "allowCallExpression": true, // The true value here is for backward compatibility
-  "allowLiteral": false,
-  "allowObject": false
-}]
+  "extends": "next/core-web-vitals"
 }
