--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "resume-schema": "^1.0.0",
     "sass": "^1.45.0",
+    "swr": "^1.1.1",
     "yaml": "^2.0.0-9"
   },
   "devDependencies": {
