--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/crawler": "^1.2.2",
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "chrome-aws-lambda": "^10.1.0",
+    "handlebars": "^4.7.7",
     "json2md": "^1.12.0",
     "keyword-extractor": "^0.0.20",
     "libphonenumber-js": "^1.9.44",
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "resume-schema": "^1.0.0",
     "sass": "^1.45.0",
+    "styled-components": "^5.3.3",
     "swr": "^1.1.1",
     "yaml": "^2.0.0-9"
   },
@@ -30,6 +31,8 @@
     "@types/puppeteer": "5.4.3",
     "@types/puppeteer-core": "5.4.0",
     "@types/react": "17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.19",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.5",
