--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     },
     "typeRoots": [ "types" ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types/json-resume.d.ts.old"],
   "exclude": ["node_modules"]
 }
